# media-intelligence-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_medios_codigo.py  1c9fad29b98d_noticias_assignment_lock_fields_.py  a7c3e91f4d5b_noticias_clip_s3_uri.py  d3f7a1c9e2b4_noticia_versiones_metadatos_ia.py  (+3 more)
docker/: entrypoint.sh
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BACKEND_ARCHITECTURE.md  DEPLOYMENT.md  EDITORIAL_DOMAIN.md  EFFICIENCY_REVIEW.md  ERROR_HANDLING.md  INFRASTRUCTURE.md  INGESTION_DESIGN.md  OPTIMIZATION_REPORT.md  ORCHESTRATOR_DESIGN.md  PRD.md  TRANSCRIPTION_ARCHITECTURE.md
scripts/: alta_cliente_joh.py  backfill_transcriptions_from_s3.py  backfill_transcriptions_from_s3_standalone.py  backup_database.sh  cluster_historias.py  consume_transcription_results.py  deploy.sh  discover_grabaciones.py  discover_grabaciones_coverage.py  enqueue_transcriptions.py  gen_ddl_offline.py  learn_repeated_content.py  resolve_entities.py  restore_database.sh  seed_medios.py  seed_medios_programas.py  segment_backlog_batch.py  start.sh  stop.sh  worker_prefetch.py
tests/: test_ai_provider_fallback.py  test_anthropic_provider_retry.py  test_api_editorial.py  test_api_pipeline.py  test_dlq_handler.py  test_editorial_service.py  test_efficiency_features.py  test_errors.py  test_ingestion_pipeline.py  test_openai_provider_retry.py  test_orchestrator_e2e.py  test_pipeline_run_service_e2e.py  test_pipeline_run_service_idempotency.py  test_retry_policy.py
(+71 files in other folders)
