[project]
name = "media-intelligence-platform"
version = "0.1.0"
description = "Plataforma de Inteligencia Mediatica Asistida por IA (MVP) - AdSignal"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "psycopg[binary]>=3.2",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "uuid6>=2024.7.10",
    "openai>=1.50",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
